--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.511.0",
     "next": "14.0.4",
